# black-crow-ai-challenge

./: .flake8  Dockerfile  Makefile  README.md  pyproject.toml
data/great_expectations_configs/checkpoints/: .ge_store_backend_id  dq_general_checkpoint.yml
data/great_expectations_configs/data-docs/: index.html
data/great_expectations_configs/data-docs/expectations/: input_orders_expectations.html  parsed_orders_expectations.html
data/great_expectations_configs/expectations/: .ge_store_backend_id  input_orders_expectations.json  parsed_orders_expectations.json
data/great_expectations_configs/validations/: .ge_store_backend_id
data/processed_orders/: .part-00000-2ddf3d5b-e8c3-4457-ba5d-3fe8f8a9fd6a-c000.json.gz.crc
etl_builder/: __init__.py  cli.py  pipeline.py
etl_builder/data_quality/: __init__.py  cli.py  data_quality.py
etl_builder/pipelines/: __init__.py  black_crow_ai_pipeline.py  cli.py
etl_builder/steps/: __init__.py  sinks.py  sources.py  step.py  transforms.py
etl_builder/utils/: exceptions.py  schema_handling.py
tests/integration/: test_pipeline.py
tests/integration/pipelines/: test_black_crow_ai_pipeline.py
tests/integration/pipelines/data/: expected_result.json
tests/unit/steps/: test_sinks.py  test_sources.py  test_transforms.py
tests/unit/steps/data/: input_file_1.json  input_file_2.json
