[tool.poetry]
name = "black-crow-ai-challenge"
version = "0.1.0"
description = ""
authors = ["Victor Poglioni <victorrenop16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
ua-parser = "^0.18.0"
click = "^8.1.7"
pydantic = "^2.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
