[tool.poetry]
name = "etl_builder"
version = "0.1.0"
description = ""
authors = ["Victor Poglioni <victorrenop16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
click = "^8.1.7"
pyspark = "^3.5.0"
user-agents = "^2.2.0"
great-expectations = "^0.18.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-spark = "^0.6.0"
flake8 = "^6.1.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
